# spell_checker

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  main.cpp
src/back/: processor.hpp  unistring.cpp  unistring.hpp  vocab.cpp  vocab.hpp
src/front/: InputPage.cpp  InputPage.hpp  MainWindow.cpp  MainWindow.hpp
tests/: CMakeLists.txt  unistring.cpp  vocabulary.cpp
